Add graderPublic (#2)
* Add graderPublic

* update dependencies + fix build script

* reformat StudentLinks

* allow for correct spelling of SHIP_PADDING

* allow for correct spelling of getXIndex() and getYIndex() in Enemy

* adjust modifiers for junit + cleanup